--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,8 @@
 <!-- Create your form here -->
 <%= form_tag new_student_path do %>
   <label>First Name:</label>
-  <%= text_field_tag
+  <%= text_field_tag :"first_name" %>
+  <label>Last Name:</label>
+  <%= text_field_tag :"last_name" %>
+  <%= submit_tag
 <% end %>
